--- a/views/index.hbs
+++ b/views/index.hbs
@@ -26,17 +26,71 @@
                     <h3 class="heading-tertiary margin-bottom-small">
                         You're going to love our app
                     </h3>
-                    <p class="paragraph">text goes here</p>
+                    <p class="paragraph">With juloup app, you have access to the largest collection of code learning
+                        from beginner to advance.<br>
+                        A playlist containing videos is entirely created for you by our team according to your
+                        level.<br>
+                    </p>
 
                     <h3 class="heading-tertiary margin-bottom-small">
                         Learn to code like you never did before
                     </h3>
-                    <p class="paragraph">text goes here</p>
+                    <p class="paragraph"> </p>
 
                     <a href="#" class="btn-text">Learn more &rarr;</a>
                     <div class="clearfix"></div>
                 </div>
             </div>
         </div>
+        <hr class="about__packages__split row">
+    </section>
+
+
+    <div class="heading__title__move"></div>
+    <section class="section-packages">
+        <div class="center-text margin-bottom-big">
+            <div class="heading__title__move"></div>
+            <h2 class="heading-secondary"><span class="packages__grey">Discover our packages</span></h2>
+        </div>
+
+        <div class="row">
+            <div class="col-1-of-3">
+                <div class="card">
+                    <div class="card__side margin__left">
+                        <h3 class="heading__packages__style">Starter</h3>
+                        <p class="starter-text">Text goes here</p>
+                    </div>
+                </div>
+            </div>
+            <div class="col-1-of-3">
+                <div class="card">
+                    <div class="card__side margin__left">
+                        <h3 class="heading__packages__style">Intermediate</h3>
+                        <p class="starter-text">
+                            <ul><span>Front-End</span>
+                                <li>HTML</li>
+                                <li>CSS</li>
+                                <li>JAVASCRIPT</li>
+                            </ul>
+
+                            <ul><span>Back-End</span>
+                                <li>MONGO DB</li>
+                                <li>NODE/EXPRESS</li>
+                                <li>PHP</li>
+                            </ul>
+                        </p>
+                    </div>
+                </div>
+            </div>
+            <div class="col-1-of-3">
+                <div class="card">
+                    <div class="card__side margin__left">
+                        <h3 class="heading__packages__style">Master</h3>
+                        <p class="starter-text">Text goes here</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="clearfix"></div>
     </section>
 </main>
