--- a/views/partials/nav.hbs
+++ b/views/partials/nav.hbs
@@ -14,7 +14,8 @@
             </li>
             <li class="navigation__item"><a href="/video-add" class="navigation__link"><span>03</span> Add a video</a>
             </li>
-            <li class="navigation__item"><a href="#" class="navigation__link"><span>04</span> Undefined yet</a></li>
+            <li class="navigation__item"><a href="/video-manage" class="navigation__link"><span>04</span> Video
+                    manage</a></li>
             <li class="navigation__item"><a href="#" class="navigation__link"><span>05</span> Undefined yet</a></li>
             <ul>
                 {{#if user}}
