--- a/views/index.hbs
+++ b/views/index.hbs
@@ -58,7 +58,24 @@
                 <div class="card">
                     <div class="card__side margin__left">
                         <h3 class="heading__packages__style">Starter</h3>
-                        <p class="starter-text">Text goes here</p>
+                        <p class="starter-text">
+                            <ul>
+                                <br>
+                                <span class="end">Front-End</span>
+                                <li class="bullet__hidden">Html for beginner &#10003;</li>
+                                <li class="bullet__hidden">Css for beginner &#10003;</li>
+                                <li class="bullet__hidden">Javascript for beginner &#10003;</li>
+                            </ul>
+                            <br>
+
+                            <ul>
+                                <span class="end">Back-End</span>
+                                <li class="bullet__hidden">Mongo DB for beginner &#10003;</li>
+                                <li class="bullet__hidden">Node/Express for beginner &#10003;</li>
+                                <li class="bullet__hidden">PHP for beginner &#10003;</li>
+                            </ul>
+
+                        </p>
                     </div>
                 </div>
             </div>
@@ -67,16 +84,21 @@
                     <div class="card__side margin__left">
                         <h3 class="heading__packages__style">Intermediate</h3>
                         <p class="starter-text">
-                            <ul><span>Front-End</span>
-                                <li>HTML</li>
-                                <li>CSS</li>
-                                <li>JAVASCRIPT</li>
-                            </ul>
 
-                            <ul><span>Back-End</span>
-                                <li>MONGO DB</li>
-                                <li>NODE/EXPRESS</li>
-                                <li>PHP</li>
+                            <ul>
+                                <br>
+                                <span class="end">Front-End</span>
+                                <li class="bullet__hidden">Intermediate Html &#10003;</li>
+                                <li class="bullet__hidden">Intermediate Css &#10003;</li>
+                                <li class="bullet__hidden">Intermediate Javascript &#10003;</li>
+                            </ul>
+                            <br>
+
+                            <ul>
+                                <span class="end">Back-End</span>
+                                <li class="bullet__hidden">Intermediate Mongo DB &#10003;</li>
+                                <li class="bullet__hidden">Intermediate Node/Express &#10003;</li>
+                                <li class="bullet__hidden">Intermediate PHP&#10003;</li>
                             </ul>
                         </p>
                     </div>
@@ -86,7 +108,25 @@
                 <div class="card">
                     <div class="card__side margin__left">
                         <h3 class="heading__packages__style">Master</h3>
-                        <p class="starter-text">Text goes here</p>
+                        <p class="starter-text">
+                            <ul>
+                                <br>
+                                <span class="end">Front-End</span>
+                                <li class="bullet__hidden">Advance Html &#10003;</li>
+                                <li class="bullet__hidden">Advance Css &#10003;</li>
+                                <li class="bullet__hidden">Advance Javascript &#10003;</li>
+                            </ul>
+                            <br>
+
+                            <ul>
+                                <span class="end">Back-End</span>
+                                <li class="bullet__hidden">Advance Mongo DB &#10003;</li>
+                                <li class="bullet__hidden">Advance Node/Express &#10003;</li>
+                                <li class="bullet__hidden">Advance PHP &#10003;</li>
+                            </ul>
+
+                        </p>
+
                     </div>
                 </div>
             </div>
