add delete videos

--- a/views/partials/videos_row.hbs
+++ b/views/partials/videos_row.hbs
@@ -21,6 +21,6 @@
     class="fa fa-edit table-icon">Edit</button>
 </td>
 <td class="table-division">
-  <button href="/video-delete/{{this._id}}" class="fa fa-trash table-icon" data-id-video="{{this._id}}"
+  <button href="/video-delete/{{this._id}}" class="fa fa-trash table-icon delete-icon" data-id-video="{{this._id}}"
     aria-hidden="true">Delete</button>
 </td>
