add manage-all tab

--- a/views/partials/videos_row.hbs
+++ b/views/partials/videos_row.hbs
@@ -17,6 +17,9 @@
   <div>{{this.back_end}}</div>
 </td>
 <td class="table-division">
+  <div>{{this._id}}</div>
+</td>
+<td class="table-division">
   <a href="/video-edit/{{this._id}}" data-id-video="{{this._id}}" class="fa fa-edit table-icon edit-icon">Edit</a>
 </td>
 <td class="table-division">
