--- a/views/partials/nav.hbs
+++ b/views/partials/nav.hbs
@@ -12,10 +12,10 @@
             <li class="navigation__item"><a href="/" class="navigation__link"><span>01</span> Home</a></li>
             <li class="navigation__item"><a href="/youttest" class="navigation__link"><span>02</span> TEST</a>
             </li>
-            <li class="navigation__item"><a href="/video-add" class="navigation__link"><span>03</span> Add a video</a>
+            <li class="navigation__item"><a href="#" class="navigation__link"><span>03</span> Undefined yet</a>
             </li>
-            <li class="navigation__item"><a href="/video-manage" class="navigation__link"><span>04</span> Video
-                    manage</a></li>
+            <li class="navigation__item"><a href="/manage-all" class="navigation__link"><span>04</span> Manage
+                    databases</a></li>
             <li class="navigation__item"><a href="#" class="navigation__link"><span>05</span> Undefined yet</a></li>
             <ul>
                 {{#if user}}
