--- a/views/video_add.hbs
+++ b/views/video_add.hbs
@@ -10,7 +10,7 @@
   <select name="difficulty_tag" id="difficulty_tag" value="Beginner">
     <option value="Beginner">Beginner</option>
     <option value="Intermediate">Intermediate</option>
-    <option value="Confirmed">Confirmed</option>
+    <option value="Master">Master</option>
   </select>
   <label for="description">Description</label>
   <input type="text" name="description" id="description" value="Lorem ipsum">
