--- a/views/video_edit.hbs
+++ b/views/video_edit.hbs
@@ -13,7 +13,7 @@
   <select name="difficulty_tag" id="difficulty_tag" value="{{video.difficulty_tag}}">
     <option value="Beginner">Beginner</option>
     <option value="Intermediate">Intermediate</option>
-    <option value="Confirmed">Confirmed</option>
+    <option value="Master">Master</option>
   </select>
   <label for="description">Description</label>
   <input type="text" name="description" id="description" value="{{video.description}}">
