--- a/views/index.hbs
+++ b/views/index.hbs
@@ -124,9 +124,7 @@
                                 <li class="bullet__hidden">Advance Node/Express &#10003;</li>
                                 <li class="bullet__hidden">Advance PHP &#10003;</li>
                             </ul>
-
                         </p>
-
                     </div>
                 </div>
             </div>
@@ -134,3 +132,4 @@
         <div class="clearfix"></div>
     </section>
 </main>
+<div class="hr__footer"></div>
