--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -778,3 +778,110 @@ ul {
 .fleche {
   margin-left: 50px;
 }
+
+/*FOOTER.HBS CSS */
+
+h5 {
+  color: #a89565;
+  font-family: "Lato", sans-serif;
+  font-size: 30px;
+  font-weight: 900;
+  text-transform: uppercase;
+  display: inline-block;
+}
+
+.dark-background {
+  background-color: #4c4c4c;
+  color: white;
+}
+
+.adress {
+  color: #fff;
+  font-family: "Lato", sans-serif;
+  font-size: 20px;
+  font-style: italic;
+  font-weight: 900;
+}
+
+.map-frame {
+  height: 375px;
+  float: right;
+  width: 60%;
+  margin-top: -355px;
+  margin-right: -15px;
+}
+
+.twitter-icon {
+  float: left;
+}
+
+.facebook__move {
+  margin-top: -50px;
+  margin-left: 240px;
+}
+/*
+
+.footer {
+  font-size: 1.9em;
+  text-align: center;
+  padding: 0 100px 0 100px;
+  margin: 0 0 25px 0;
+}
+
+.adress {
+  font-style: normal;
+  font-size: 0.8em;
+  margin: 0 0 30px 0;
+}
+
+footer a {
+  color: rgb(67, 163, 230);
+  text-decoration: none;
+}
+
+.footer-li {
+  list-style-type: none;
+  text-align: center;
+}
+
+.map-frame {
+  height: 375px;
+  float: right;
+  width: 60%;
+}
+
+/* Social Media Icons */
+.social-wrapper {
+  text-align: center;
+}
+
+.social-wrapper ul li {
+  display: inline;
+  margin: 0 5px;
+}
+
+.twitter-icon,
+.facebook-icon,
+.instagram-icon {
+  margin-top: 0.625em;
+  width: 40px;
+  height: 40px;
+  opacity: 0.6;
+  filter: alpha(opacity=60); /* For IE8 and earlier */
+  border-radius: 25px;
+}
+
+.twitter-icon:hover,
+.facebook-icon:hover,
+.instagram-icon:hover {
+  opacity: 1;
+  filter: alpha(opacity=100); /* For IE8 and earlier */
+}
+
+.icon__bullet__free {
+  list-style-type: none;
+}
+
+.hr__footer {
+  margin-bottom: -650px;
+}
