--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -14,6 +14,7 @@
 
   <div class="container">
     {{{body}}}
+    {{>footer}}
   </div>
 
   <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"></script>
