add course route fix

--- a/views/auth/login.hbs
+++ b/views/auth/login.hbs
@@ -3,12 +3,12 @@
     <form action="/login" method="post" id="form-container">
         <div class="form__group">
             <label for="username" class="login__label">Username</label>
-            <input type="text" name="username" class="input__login" placeholder="Enter your username">
+            <input type="text" name="username" class="input__login" placeholder="Enter your username" value="juloup">
             <hr>
         </div>
         <div class="form__group">
             <label for="password" class="login__label">Password</label>
-            <input type="password" name="password" class="input__login" placeholder="Enter your password" />
+            <input type="password" name="password" class="input__login" placeholder="Enter your password" value="1234" />
             <hr>
         </div>
         <div class="wrap__button">
