--- a/views/auth/signup.hbs
+++ b/views/auth/signup.hbs
@@ -5,17 +5,17 @@
       <form action="/signup" method="post" id="form-container">
         <div class="form__group">
           <label for="username" class="signup__label">Username</label>
-          <input type="text" name="username" class="input__signup" placeholder="Enter your username">
+          <input type="text" name="username" class="input__signup" placeholder="Enter your username" value="juloup">
         </div>
         <hr>
         <div class="form__group">
           <label for="email" class="signup__label">Email</label>
-          <input type="text" name="email" class="input__signup" id="email__margin" placeholder="Enter your email">
+          <input type="text" name="email" class="input__signup" id="email__margin" placeholder="Enter your email" value="toto@toto.fr">
         </div>
         <hr>
         <div class="form__group">
           <label for="password" class="signup__label">Password</label>
-          <input type="password" name="password" class="input__signup" placeholder="Enter your password" />
+          <input type="password" name="password" class="input__signup" placeholder="Enter your password" value="1234"/>
         </div>
         <hr>
 
