--- a/views/manage_all.hbs
+++ b/views/manage_all.hbs
@@ -10,11 +10,8 @@
     <thead>
       <tr class="table-row">
         <th class="table-head">Course Name</th>
-        <th class="table-head">Course Url</th>
-        <th class="table-head">Course Difficulty</th>
-        <th class="table-head">Course Description</th>
-        <th class="table-head">Course Front end</th>
-        <th class="table-head">Course Back end</th>
+        <th class="table-head">Difficulty</th>
+        <th class="table-head">Description</th>
         <th class="table-head">Edit</th>
         <th class="table-head">Delete</th>
       </tr>
