--- a/views/course_edit.hbs
+++ b/views/course_edit.hbs
@@ -21,3 +21,33 @@
   <button>Submit</button>
 </form>
 {{/if}}
+<h4>Videos</h4>
+<table class="product-manage-table">
+  <thead>
+    <tr class="table-row">
+      <th class="table-head">Video Name</th>
+      <th class="table-head">Video Url</th>
+      <th class="table-head">Video Difficulty</th>
+      <th class="table-head">Video Description</th>
+      <th class="table-head">Video Front end</th>
+      <th class="table-head">Video Back end</th>
+      <th class="table-head">Video DB ID</th> {{!-- for adding to course --}}
+
+      <th class="table-head">Add video to course</th>
+    </tr>
+  </thead>
+
+  <tbody>
+    {{#each videos}}
+
+    <tr class="table-row" id="{{this._id}}">
+      {{> videos_row }}
+    </tr>
+    {{/each}}
+    {{#unless videos}}
+    <tr>
+      <td colspan="9">Sorry no videos yet</td>
+    </tr>
+    {{/unless}}
+  </tbody>
+</table>
