--- a/views/partials/videos_row.hbs
+++ b/views/partials/videos_row.hbs
@@ -1,3 +1,6 @@
+{{../category}}
+{{../../category}}
+{{../../../category}}
 <td class="table-division">
   <div>{{this.name}}</div>
 </td>
@@ -19,6 +22,13 @@
 <td class="table-division">
   <div>{{this._id}}</div>
 </td>
+{{#if category}}
+<td class="table-division">
+  <input type="checkbox" name="course_videos" id="course_videos">
+</td>
+{{/if}}
+
+{{#unless category}}
 <td class="table-division">
   <a href="/video-edit/{{this._id}}" data-id-video="{{this._id}}" class="fa fa-edit table-icon edit-icon">Edit</a>
 </td>
@@ -26,3 +36,4 @@
   <button href="/video-delete/{{this._id}}" class="fa fa-trash table-icon delete-icon" data-id-video="{{this._id}}"
     aria-hidden="true">Delete</button>
 </td>
+{{/unless}}
