--- a/views/index.hbs
+++ b/views/index.hbs
@@ -125,6 +125,7 @@
                                 <li class="bullet__hidden">Advance PHP &#10003;</li>
                             </ul>
                         </p>
+                        <hr>
                     </div>
                 </div>
             </div>
@@ -133,3 +134,4 @@
     </section>
 </main>
 <div class="hr__footer"></div>
+{{>footer}}
