add video to course

--- a/views/partials/videos_row_course.hbs
+++ b/views/partials/videos_row_course.hbs
@@ -19,18 +19,7 @@
 <td class="table-division">
   <div>{{this._id}}</div>
 </td>
-{{#if category}}
-<td class="table-division">
-  <input type="checkbox" name="course_videos" id="course_videos">
-</td>
-{{/if}}
 
-{{#unless category}}
 <td class="table-division">
-  <a href="/video-edit/{{this._id}}" data-id-video="{{this._id}}" class="fa fa-edit table-icon edit-icon">Edit</a>
+  <input type="checkbox" name="course_videos" id="{{this._id}}" class="video-checkbox" value="{{this._id}}">
 </td>
-<td class="table-division">
-  <button href="/video-delete/{{this._id}}" class="fa fa-trash table-icon delete-icon" data-id-video="{{this._id}}"
-    aria-hidden="true">Delete</button>
-</td>
-{{/unless}}
