--- a/views/course_edit.hbs
+++ b/views/course_edit.hbs
@@ -3,51 +3,49 @@
 {{#if msg}}
 <p>{{msg}}</p>
 {{/if}}
-{{#if course}}
-<form action="/course-edit" method="post" id="course-edit-form">
+
+<form action="/course-edit/{{course._id}}" method="post" id="course-edit-form">
   <label for="name">Course name</label>
   <input type="text" name="name" id="video-name" value="{{course.course_name}}">
 
   <label for="course_difficulty">Difficulty</label>
   <select name="course_difficulty" id="course_difficulty" value="{{course.course_difficulty}}">
+    <option value="{{course.course_difficulty}}">{{course.course_difficulty}}</option>
     <option value="Beginner">Beginner</option>
     <option value="Intermediate">Intermediate</option>
     <option value="Master">Master</option>
   </select>
 
-  <label for="course_videos">Course videos</label>
-  <input type="text" name="course_videos" id="course_videos" value="{{course.course_videos}}">
 
-  <button>Submit</button>
+  <h4>Select videos for the course</h4>
+  <table class="product-manage-table">
+    <thead>
+      <tr class="table-row">
+        <th class="table-head">Video Name</th>
+        <th class="table-head">Url</th>
+        <th class="table-head">Difficulty</th>
+        <th class="table-head">Description</th>
+        <th class="table-head">Front end</th>
+        <th class="table-head">Back end</th>
+        <th class="table-head">Video DB ID</th> {{!-- for adding to course --}}
+
+        <th class=" table-head">Add video to course</th>
+      </tr>
+    </thead>
+
+    <tbody>
+      {{#each videos}}
+
+      <tr class="table-row" id="{{this._id}}">
+        {{> videos_row_course }}
+      </tr>
+      {{/each}}
+      {{#unless videos}}
+      <tr>
+        <td colspan="9">Sorry no videos yet</td>
+      </tr>
+      {{/unless}}
+    </tbody>
+  </table>
+  <button id="edit-course-submit-btn">Submit</button>
 </form>
-{{/if}}
-<h4>Videos</h4>
-<table class="product-manage-table">
-  <thead>
-    <tr class="table-row">
-      <th class="table-head">Video Name</th>
-      <th class="table-head">Video Url</th>
-      <th class="table-head">Video Difficulty</th>
-      <th class="table-head">Video Description</th>
-      <th class="table-head">Video Front end</th>
-      <th class="table-head">Video Back end</th>
-      <th class="table-head">Video DB ID</th> {{!-- for adding to course --}}
-
-      <th class="table-head">Add video to course</th>
-    </tr>
-  </thead>
-
-  <tbody>
-    {{#each videos}}
-
-    <tr class="table-row" id="{{this._id}}">
-      {{> videos_row }}
-    </tr>
-    {{/each}}
-    {{#unless videos}}
-    <tr>
-      <td colspan="9">Sorry no videos yet</td>
-    </tr>
-    {{/unless}}
-  </tbody>
-</table>
