--- a/views/manage_all.hbs
+++ b/views/manage_all.hbs
@@ -7,7 +7,7 @@
   <table class="courses-manage-table">
     <thead>
       <tr class="table-row">
-        <th class="table-head">Course Name</th>
+        <th class="table-head vid">Course Name</th>
         <th class="table-head">Difficulty</th>
         <th class="table-head">Description</th>
         <th class="table-head">Edit</th>
@@ -35,12 +35,12 @@
     <thead>
       <tr class="table-row">
         <th class="table-head">Video Name</th>
-        <th class="table-head">Video Url</th>
-        <th class="table-head">Video Difficulty</th>
-        <th class="table-head">Video Description</th>
-        <th class="table-head">Video Front end</th>
-        <th class="table-head">Video Back end</th>
-        <th class="table-head">Video DB ID</th> {{!-- for adding to course --}}
+        <th class="table-head" id="url">Url</th>
+        <th class="table-head">Difficulty</th>
+        <th class="table-head">Description</th>
+        <th class="table-head">Front end</th>
+        <th class="table-head">Back end</th>
+        <th class="table-head">DB ID</th> {{!-- for adding to course --}}
         <th class="table-head">Edit</th>
         <th class="table-head">Delete</th>
       </tr>
