--- a/views/partials/videos_row.hbs
+++ b/views/partials/videos_row.hbs
@@ -1,11 +1,11 @@
 <td class="table-division">
-  <div>{{this.name}}</div>
+  <div class="name_padding">{{this.name}}</div>
 </td>
 <td class="table-division">
-  <div>{{this.url}}</div>
+  <div class="url_padding">{{this.url}}</div>
 </td>
 <td class="table-division">
-  <div>{{this.difficulty_tag}}</div>
+  <div class="difficulty_padding">{{this.difficulty_tag}}</div>
 </td>
 <td class="table-division">
   <div>{{this.description}}</div>
