--- a/views/partials/courses_row.hbs
+++ b/views/partials/courses_row.hbs
@@ -5,7 +5,7 @@
   <div class="courses">{{this.course_difficulty}}</div>
 </td>
 <td class="table-division courses">
-  <div class="courses">{{this.course_videos}}</div>
+  <div class="courses">{{this.course_description}}</div>
 </td>
 <td class="table-division courses">
   <a href="/course-edit/{{this._id}}" data-id-course="{{this._id}}" class="fa fa-edit table-icon edit-icon">Edit</a>
