--- a/views/index.hbs
+++ b/views/index.hbs
@@ -72,7 +72,7 @@
                                 <span class="end">Back-End</span>
                                 <li class="bullet__hidden">Mongo DB for beginner &#10003;</li>
                                 <li class="bullet__hidden">Node/Express for beginner &#10003;</li>
-                                <li class="bullet__hidden">PHP for beginner &#10003;</li>
+                                <li class="bullet__hidden">Ruby for beginner &#10003;</li>
                             </ul>
 
                         </p>
@@ -98,7 +98,7 @@
                                 <span class="end">Back-End</span>
                                 <li class="bullet__hidden">Intermediate Mongo DB &#10003;</li>
                                 <li class="bullet__hidden">Intermediate Node/Express &#10003;</li>
-                                <li class="bullet__hidden">Intermediate PHP&#10003;</li>
+                                <li class="bullet__hidden">Intermediate Ruby&#10003;</li>
                             </ul>
                         </p>
                     </div>
@@ -122,7 +122,7 @@
                                 <span class="end">Back-End</span>
                                 <li class="bullet__hidden">Advance Mongo DB &#10003;</li>
                                 <li class="bullet__hidden">Advance Node/Express &#10003;</li>
-                                <li class="bullet__hidden">Advance PHP &#10003;</li>
+                                <li class="bullet__hidden">Advance Ruby &#10003;</li>
                             </ul>
                         </p>
                         <hr>
