--- a/views/partials/nav.hbs
+++ b/views/partials/nav.hbs
@@ -10,7 +10,7 @@
     <nav class="navigation__nav">
         <ul class="navigation__list">
             <li class="navigation__item"><a href="/" class="navigation__link"><span>01</span> Home</a></li>
-            <li class="navigation__item"><a href="/youttest" class="navigation__link"><span>02</span> TEST</a>
+            <li class="navigation__item"><a href="#" class="navigation__link"><span>02</span> Undefined yet</a>
             </li>
             <li class="navigation__item"><a href="#" class="navigation__link"><span>03</span> Undefined yet</a>
             </li>
