--- a/views/index.hbs
+++ b/views/index.hbs
@@ -7,7 +7,7 @@
     <div class="text-box">
         <h1 class="heading-primary">
             <span class="heading-primary-main">Become</span>
-            <span class="heading-primary-sub">a master with juloup app</span>
+            <span class="heading-primary-sub">a code master with juloup app</span>
         </h1>
 
         <a href="#" class="btn btn-white btn-animated">Discover our packages</a>
@@ -27,7 +27,7 @@
                         You're going to love our app
                     </h3>
                     <p class="paragraph">With juloup app, you have access to the largest collection of code learning
-                        from beginner to advance.<br>
+                        videos from beginner to advance.<br>
                         A playlist containing videos is entirely created for you by our team according to your
                         level.<br>
                     </p>
