edit profile picture

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -447,7 +447,12 @@ hr {
 
 /* INDEX.HBS CSS */
 
+.fab.fa-earlybirds {
+  background-color: aliceblue;
+}
 .header {
+  width: 1367px;
+  margin-left: -129px;
   height: 95vh;
   background-image: linear-gradient(
       to right bottom,
@@ -610,12 +615,11 @@ hr {
 
 .about__packages__split {
   border-bottom: 1px solid #bdb4a3;
-  width: 65%;
-  margin-left: 205px;
+  width: 95%;
 }
 
 .heading__title__move {
-  margin-bottom: -330px;
+  margin-bottom: -315px;
 }
 
 .heading-secondary {
@@ -960,6 +964,6 @@ button {
 
 /* EDIT VIDEOS */
 
-.name_padding {
-  padding-left: 20px;
+.padding {
+  padding-top: 20px;
 }
