--- a/views/auth/signup.hbs
+++ b/views/auth/signup.hbs
@@ -5,24 +5,38 @@
       <form action="/signup" method="post" id="form-container">
         <div class="form__group">
           <label for="username" class="signup__label">Username</label>
-          <input type="text" name="username" class="input__signup" placeholder="Enter your username" value="juloup">
+          <input type="text" name="username" class="input__signup" placeholder="Enter your username">
+          {{!--value="juloup"--}}
         </div>
         <hr>
         <div class="form__group">
           <label for="email" class="signup__label">Email</label>
-          <input type="text" name="email" class="input__signup" id="email__margin" placeholder="Enter your email" value="toto@toto.fr">
+          <input type="text" name="email" class="input__signup" id="email__margin" placeholder="Enter your email">
+          {{!--value="toto.fr"--}}
         </div>
         <hr>
         <div class="form__group">
           <label for="password" class="signup__label">Password</label>
-          <input type="password" name="password" class="input__signup" placeholder="Enter your password" value="1234"/>
+          <input type="password" name="password" class="input__signup" placeholder="Enter your password" />
+          {{!--value="1234"--}}
         </div>
         <hr>
 
         <div class="wrap__button">
           <button class="signup__button" type="submit">Signup</button>
+
+
+
+          <label for="course_difficulty">Level</label>
+          <select name="course_difficulty" id="course_difficulty" value="Beginner">
+            <option value="Beginner">Beginner</option>
+            <option value="Intermediate">Intermediate</option>
+            <option value="Master">Master</option>
+          </select>
+
+
         </div>
-        {{#if message }}
+        {{#if message}}
         <div class="error__message">{{message}}</div>
         {{/if}}
       </form>
