--- a/views/partials/videos_row.hbs
+++ b/views/partials/videos_row.hbs
@@ -1,20 +1,20 @@
 <td class="table-division">
-  <div class="name_padding">{{this.name}}</div>
+  <div class="padding">{{this.name}}</div>
 </td>
 <td class="table-division">
-  <div class="url_padding">{{this.url}}</div>
+  <div class="padding">{{this.url}}</div>
 </td>
 <td class="table-division">
-  <div class="difficulty_padding">{{this.difficulty_tag}}</div>
+  <div class="padding">{{this.difficulty_tag}}</div>
 </td>
 <td class="table-division">
-  <div>{{this.description}}</div>
+  <div class="padding">{{this.description}}</div>
 </td>
 <td class="table-division">
-  <div>{{this.front_end}}</div>
+  <div class="padding">{{this.front_end}}</div>
 </td>
 <td class="table-division">
-  <div>{{this.back_end}}</div>
+  <div class="padding">{{this.back_end}}</div>
 </td>
 <td class="table-division">
   <div>{{this._id}}</div>
