--- a/views/index.hbs
+++ b/views/index.hbs
@@ -1,7 +1,7 @@
 <header class="header">
     <div class="logo-box">
         <img src="" alt="logo" class="logo" />
-        <i class="fas fa-laptop-code"></i>
+        <i class="fab fa-earlybirds"></i>
     </div>
 
     <div class="text-box">
@@ -10,7 +10,7 @@
             <span class="heading-primary-sub">a master with juloup app</span>
         </h1>
 
-        <a href="#" class="btn btn-white btn-animated">Discover our packages</a>
+        <a href="#packages" class="btn btn-white btn-animated">Discover our packages</a>
     </div>
 </header>
 
@@ -37,7 +37,7 @@
                     </h3>
                     <p class="paragraph"> </p>
 
-                    <a href="#" class="btn-text">Learn more &rarr;</a>
+                    {{!-- <a href="#" class="btn-text">Learn more &rarr;</a> --}}
                     <div class="clearfix"></div>
                 </div>
             </div>
@@ -46,7 +46,7 @@
     </section>
 
 
-    <div class="heading__title__move"></div>
+    <div class="heading__title__move" id="packages"></div>
     <section class="section-packages">
         <div class="center-text margin-bottom-big">
             <div class="heading__title__move"></div>
@@ -125,7 +125,7 @@
                                 <li class="bullet__hidden">Advance Ruby &#10003;</li>
                             </ul>
                         </p>
-                        <hr>
+
                     </div>
                 </div>
             </div>
@@ -134,4 +134,5 @@
     </section>
 </main>
 <div class="hr__footer"></div>
+<hr class="about__packages__split">
 {{>footer}}
