--- a/views/partials/videos_row_course.hbs
+++ b/views/partials/videos_row_course.hbs
@@ -1,25 +1,25 @@
-<td class="table-division">
+<td class="table-division video">
   <div>{{this.name}}</div>
 </td>
-<td class="table-division">
+<td class="table-division video">
   <div>{{this.url}}</div>
 </td>
-<td class="table-division">
+<td class="table-division video ">
   <div>{{this.difficulty_tag}}</div>
 </td>
-<td class="table-division">
+<td class="table-division video">
   <div>{{this.description}}</div>
 </td>
-<td class="table-division">
+<td class="table-division video">
   <div>{{this.front_end}}</div>
 </td>
-<td class="table-division">
+<td class="table-division video">
   <div>{{this.back_end}}</div>
 </td>
-<td class="table-division">
+<td class="table-division video">
   <div>{{this._id}}</div>
 </td>
 
-<td class="table-division">
+<td class="table-division video">
   <input type="checkbox" name="course_videos" id="{{this._id}}" class="video-checkbox" value="{{this._id}}">
 </td>
