--- a/views/profile.hbs
+++ b/views/profile.hbs
@@ -2,19 +2,27 @@
 <h1 class="welcome__msg">Welcome to Juloup app<span class="bold__grey">{{user.username}}</span></h1>
 {{/if}}
 
-
-{{#if user.profilePhoto}}
 <img src="{{user.profilePhoto}}" class="profileImg" />
-{{else}}
-{{!-- <img src="https://media3.giphy.com/media/113PoJxEaRxKbm/giphy.gif?cid=3640f6095bff0b91325859656f15cb72" alt=""> --}}
-<h2>No profile picture! <br> Please upload your photo</h2>
-<form id="photoForm" action="/upload" method="post" enctype="multipart/form-data">
-  <div class="photoBox"><input type="file" name="profilePhoto" class="photoInput" onchange="fileSelect(event)"><span
-      class="fileName">Click here to select the profile picture</span></div>
-  <button type="submit" class="saveBut">Save</button>
 
+{{#unless user.profilePhoto}}
+<h2>No profile picture! <br> Please upload your photo</h2>
+{{/unless}}
+
+<form id="photoForm" action="/profile" method="post" enctype="multipart/form-data">
+  <span class="fileName">select the profile picture</span>
+  {{!-- <div class="photoBox"> --}}
+  <input type="file" name="profilePhoto" class="photoInput" onchange="fileSelect(event)">
+  {{!--  --}}
+  {{!-- </div> --}}
+  <button type="submit" class="saveBut">Save profile picture</button>
 </form>
-{{/if}}
+
+{{!-- <img src="https://media3.giphy.com/media/113PoJxEaRxKbm/giphy.gif?cid=3640f6095bff0b91325859656f15cb72" alt=""> --}}
+
+
+
+{{!-- {{/if}} --}}
+
 {{#if message }}
 <div class="error-message w50">{{message}}</div>
 {{/if}}
