add my course, reduce edit course

--- a/views/course_edit.hbs
+++ b/views/course_edit.hbs
@@ -6,7 +6,7 @@
 
 <form action="/course-edit/{{course._id}}" method="post" id="course-edit-form">
   <label for="name">Course name</label>
-  <input type="text" name="name" id="video-name" value="{{course.course_name}}">
+  <input type="text" name="name" id="course-name" value="{{course.course_name}}">
 
   <label for="course_difficulty">Difficulty</label>
   <select name="course_difficulty" id="course_difficulty" value="{{course.course_difficulty}}">
@@ -15,19 +15,24 @@
     <option value="Intermediate">Intermediate</option>
     <option value="Master">Master</option>
   </select>
+  <label for="course_cursus">Cursus</label>
+  <input type="text" name="course_cursus" id="course-name" value="{{course.course_cursus}}">
 
-
+  <h4>Course videos</h4>
+  {{#each course.course_videos}}
+  <p>{{this.name}}</p>
+  {{/each}}
   <h4>Select videos for the course</h4>
   <table class="product-manage-table">
     <thead>
       <tr class="table-row">
         <th class="table-head">Video Name</th>
-        <th class="table-head">Url</th>
+        {{!-- <th class="table-head">Url</th> --}}
         <th class="table-head">Difficulty</th>
         <th class="table-head">Description</th>
-        <th class="table-head">Front end</th>
+        {{!-- <th class="table-head">Front end</th>
         <th class="table-head">Back end</th>
-        <th class="table-head">Video DB ID</th> {{!-- for adding to course --}}
+        <th class="table-head">Video DB ID</th> for adding to course --}}
 
         <th class=" table-head">Add video to course</th>
       </tr>
@@ -35,7 +40,6 @@
 
     <tbody>
       {{#each videos}}
-
       <tr class="table-row" id="{{this._id}}">
         {{> videos_row_course }}
       </tr>
