--- a/views/index.hbs
+++ b/views/index.hbs
@@ -1,7 +1,7 @@
 <header class="header">
     <div class="logo-box">
-        <img src="" alt="logo" class="logo" />
-        <i class="fab fa-earlybirds"></i>
+
+        <i class="fab fa-earlybirds" style="font-size:48px;color:#4c4c4c;"></i>
     </div>
 
     <div class="text-box">
@@ -134,5 +134,7 @@
     </section>
 </main>
 <div class="hr__footer"></div>
-<hr class="about__packages__split">
+<div class="move_last_hr">
+    <hr class="about__packages__split">
+</div>
 {{>footer}}
