--- a/views/partials/courses_row.hbs
+++ b/views/partials/courses_row.hbs
@@ -11,6 +11,6 @@
   <a href="/course-edit/{{this._id}}" data-id-course="{{this._id}}" class="fa fa-edit table-icon edit-icon">Edit</a>
 </td>
 <td class="table-division courses">
-  <button href="/course-delete/{{this._id}}" class="fa fa-trash table-icon delete-icon" data-id-video="{{this._id}}"
-    aria-hidden="true">Delete</button>
+  <button href="/course-delete/{{this._id}}" id="delete_btn" class="fa fa-trash table-icon delete-icon"
+    data-id-video="{{this._id}}" aria-hidden="true">Delete</button>
 </td>
