--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -9,6 +9,8 @@
   <link rel="stylesheet" href="/stylesheets/style.css">
   <link href="https://fonts.googleapis.com/css?family=Lato:100,300,400,700,900&display=swap" rel="stylesheet" />
   <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
+
+  <script src="https://kit.fontawesome.com/014fc2e34f.js"></script>
 </head>
 
 <body>
