--- a/views/partials/nav.hbs
+++ b/views/partials/nav.hbs
@@ -12,15 +12,15 @@
             <li class="navigation__item"><a href="/" class="navigation__link"><span>01</span> Home</a></li>
             <li class="navigation__item"><a href="/my-course" class="navigation__link"><span>02</span> My course</a>
             </li>
-            <li class="navigation__item"><a href="#" class="navigation__link"><span>03</span> Undefined yet</a>
-            </li>
+            {{!-- <li class="navigation__item"><a href="#" class="navigation__link"><span>03</span> Undefined yet</a>
+            </li> --}}
 
             {{#if isAdmin}}
-            <li class="navigation__item"><a href="/manage-all" class="navigation__link"><span>04</span> Manage
+            <li class="navigation__item"><a href="/manage-all" class="navigation__link"><span>03</span> Manage
                     databases</a></li>
             {{/if}}
 
-            <li class="navigation__item"><a href="#" class="navigation__link"><span>05</span> Undefined yet</a></li>
+            {{!-- <li class="navigation__item"><a href="#" class="navigation__link"><span>05</span> Undefined yet</a></li> --}}
             <ul>
                 {{#if user}}
 
