auto replace watch?v= on video add

--- a/views/partials/nav.hbs
+++ b/views/partials/nav.hbs
@@ -9,14 +9,14 @@
 
     <nav class="navigation__nav">
         <ul class="navigation__list">
-            <li class="navigation__item"><a href="/" class="navigation__link"><span>01</span> Home</a></li>
-            <li class="navigation__item"><a href="/my-course" class="navigation__link"><span>02</span> My course</a>
+            <li class="navigation__item"><a href="/" class="navigation__link"> Home</a></li>
+            <li class="navigation__item"><a href="/my-course" class="navigation__link"> My course</a>
             </li>
             {{!-- <li class="navigation__item"><a href="#" class="navigation__link"><span>03</span> Undefined yet</a>
             </li> --}}
 
             {{#if isAdmin}}
-            <li class="navigation__item"><a href="/manage-all" class="navigation__link"><span>03</span> Manage
+            <li class="navigation__item"><a href="/manage-all" class="navigation__link"> Manage
                     databases</a></li>
             {{/if}}
 
